--- a/content/oldUI.css
+++ b/content/oldUI.css
@@ -316,3 +316,61 @@ nav[class*="guilds_"] {
     display: none !important;
   }
 }
+
+
+*,
+*::before,
+*::after {
+    border-radius: 0 !important;
+}
+
+.svg_cc5dd2 > mask,
+.svg__44b0c > rect,
+.svg__44b0c > circle,
+.svg__44b0c rect[mask='url(#:rhi:)'],
+.avatar__20a53 .status_a423bd {
+    display: none;
+}
+
+.mask__68edb > foreignObject,
+.svg__44b0c > foreignObject,
+.svg__2338f > foreignObject {
+    mask: none;
+}
+
+.wrapper__44b0c:has(rect)::after {
+    content: '';
+    display: block;
+    position: absolute;
+    height: 8px;
+    width: 8px;
+    bottom: -4px;
+    right: -4px;
+    border: 2px solid var(--background-base-lower);
+}
+#app-mount .wrapper__44b0c:has(rect[fill='#40a258'])::after {
+    background: #40a258 !important;
+}
+#app-mount .wrapper__44b0c:has(rect[fill='#d83a41'])::after {
+    background: #d83a41 !important;
+}
+#app-mount .wrapper__44b0c:has(rect[fill='#cc954c'])::after {
+    background: #cc954c !important;
+}
+#app-mount .wrapper__44b0c:has(rect[fill='#82838b'])::after {
+    background: #82838b !important;
+}
+#app-mount .wrapper__44b0c:has(rect[fill='#9147ff'])::after {
+    background: #9147ff !important;
+}
+
+.lowerBadge_cc5dd2 {
+    border: 2px solid var(--background-base-lower);
+    bottom: -4px;
+    right: -4px;
+}
+.upperBadge_cc5dd2 {
+    border: 2px solid var(--background-base-lower);
+    top: -4px;
+    right: -4px;
+}
