--- a/content/clanTags.css
+++ b/content/clanTags.css
@@ -1,3 +1,5 @@
+/* @import url("https://raw.githubusercontent.com/selfanger/revert/refs/heads/main/content/clanTags.css"); */
+
 [class^="headerText"] {
   display: inline-flex;
 }
