--- a/main.themes.css
+++ b/main.themes.css
@@ -1,8 +1,8 @@
 /*
- * @name revert
- * @author @0928712
- * @description [🎸] Old discord UI with improved features
+ * @name styleflex
+ * @description [🎸] customizable discord features
  */
+
 
 @import url("https://raw.githubusercontent.com/selfanger/revert/refs/heads/main/content/contextMenuCompact.css");
 @import url("https://raw.githubusercontent.com/selfanger/revert/refs/heads/main/content/contentConfig.css");
